src/scss/styles.scss
.header {
  top: -65px;
  background: #151515 url("/dist/bg.jpg") no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  zoom: 1.05;
}

.header::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
}

.header .text-container {
  z-index: 10;
}

.header .roles {
  font-family: "lora-regular", serif;
}

.header .social {
  bottom: 50px;
}

.services {
  top: -65px;
  background: #151515 url("/bg-2.jpg") no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  zoom: 1.05;
}

.services::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, .5);
}

.services .text-container {
  z-index: 10;
}

.stats {
  position: relative;
  top: -80px;
}

.contact {
  position: relative;
  top: -80px;
}

.project-modals .modal-dialog {
  max-width: 1150px;
  margin-top: 130px;
  top: 20%;
}

@media (max-width: 767px) {
  .about-content {
    flex-direction: column !important;
  }

  .header .social {
    bottom: 30px;
  }
}

